--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!! Ciao sono Giuseppe
+<html>
+    <head>
+        <title>Giuseppe</title>
+    </head>
+    <body>
+        <p><h2>Ciao sono Giuseppe</h2></p>
+        <br />
+        <p>Su questo sito vedrete cose su di me</p>
+    </body>
+</html>
